--- a/index.html
+++ b/index.html
@@ -8,19 +8,23 @@
     <title>facts</title>
   </head>
   <body>
-    <a id="getTenJokesTag" href="http://localhost:5000/api/jokes/"
+    <a
+      id="getTenJokesTag"
+      href="https://treciasegzassendien.herokuapp.com//api/jokes/"
       >/api/jokes/
     </a>
     <p>get 10 jokes</p>
     <hr />
-    <a id="getAmountJokesTag" href="http://localhost:5000/api/jokes/4"
+    <a
+      id="getAmountJokesTag"
+      href="https://treciasegzassendien.herokuapp.com//api/jokes/4"
       >/api/jokes/:amount Pvz:4
     </a>
     <p>get chosen amount of jokes</p>
     <hr />
     <a
       id="getTenJokesFromCategoryTag"
-      href="http://localhost:5000/api/jokes/science"
+      href="https://treciasegzassendien.herokuapp.com//api/jokes/science"
       >/api/jokes/:category Pvz: science
     </a>
     <p>get 10 jokes from chosen category</p>
@@ -31,7 +35,7 @@
     <hr />
     <a
       id="getAmountJokesFromCategoryTag"
-      href="http://localhost:5000/api/jokes/science/3"
+      href="https://treciasegzassendien.herokuapp.com//api/jokes/science/3"
       >api/jokes/:category/:amount Pvz: science/3
     </a>
     <p>get chosen amount of jokes from chosen category</p>
