bonus slashu pridejau nx

--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
   <body>
     <a
       id="getTenJokesTag"
-      href="https://treciasegzassendien.herokuapp.com//api/jokes/"
+      href="https://treciasegzassendien.herokuapp.com/api/jokes/"
       >/api/jokes/
     </a>
     <p>get 10 jokes</p>
     <hr />
     <a
       id="getAmountJokesTag"
-      href="https://treciasegzassendien.herokuapp.com//api/jokes/4"
+      href="https://treciasegzassendien.herokuapp.com/api/jokes/4"
       >/api/jokes/:amount Pvz:4
     </a>
     <p>get chosen amount of jokes</p>
     <hr />
     <a
       id="getTenJokesFromCategoryTag"
-      href="https://treciasegzassendien.herokuapp.com//api/jokes/science"
+      href="https://treciasegzassendien.herokuapp.com/api/jokes/science"
       >/api/jokes/:category Pvz: science
     </a>
     <p>get 10 jokes from chosen category</p>
@@ -35,7 +35,7 @@
     <hr />
     <a
       id="getAmountJokesFromCategoryTag"
-      href="https://treciasegzassendien.herokuapp.com//api/jokes/science/3"
+      href="https://treciasegzassendien.herokuapp.com/api/jokes/science/3"
       >api/jokes/:category/:amount Pvz: science/3
     </a>
     <p>get chosen amount of jokes from chosen category</p>
