last min fix category

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <hr />
     <a
       id="getTenJokesFromCategoryTag"
-      href="https://treciasegzassendien.herokuapp.com/api/jokes/science"
-      >/api/jokes/:category Pvz: science
+      href="https://treciasegzassendien.herokuapp.com/api/joke/science"
+      >/api/joke/:category Pvz: science
     </a>
     <p>get 10 jokes from chosen category</p>
     <p>
